Downgrade to java 11.